yamls/dev.yaml
# Creating namespace wtih name "prod"
apiVersion: v1
kind: Namespace
metadata:
  name: prod 
  labels: 
    name: prod
