yamls/httpd-deployment-with-volume.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    name: httpd-deployment-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd-server
          image: httpd
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
          - mountPath: /usr/local/apache2/htdocs
            name: test-html        # name of the directory on host machine
      volumes:
        - name: test-html
          hostPath:
            path: /test-html
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  labels:
    name: httpd-deplyment-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30124
  selector:
    app: httpd
  type: NodePort
