yamls/multi-pod3.yaml
---
 apiVersion: v1
 kind: Pod
 metadata:
   name: rss-site
   labels:
     app: web
 spec:
   volumes:
   - name: html-dir
     Dir: /home/vagrant/html
   containers:
     - name: front-end
       image: nginx
       ports: 
         - containerPort: 80
       volumeMounts:
       - name: html-dir
         mountPath: /usr/share/nginx/html       
     - name: rss-reader
       image: nickchase/rss-php-nginx:v1
       ports:
         - containerPort: 88
---
apiVersion: v1
kind: Service
metadata:
  name: rss-site-serv
  labels:
    name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32102
    - containerPort: 80
