yamls/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: tomcat-server
    type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 9382
