yamls/nginx-deployment-with-volume.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    name: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:          
    - mountPath: /usr/share/nginx/html
      name: test-html         # name of the directory on host machine
  volumes:
  - name: test-html
    hostPath:
      path: /test-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32105
  selector:
    name: nginx-app
