yamls/nginxpod-with-volume.yaml
#Creating Pod with hostPath Volume: vi nginx-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    name: nginx-app
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:          
    - mountPath: /usr/share/nginx/html
      name: test-html         # name of the directory on host machine
  volumes:
  - name: test-html
    hostPath:
      path: /test-html
---
# Creating Service
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    name: nginx-app
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32105
  selector:
    name: nginx-app
##
#After this you need to check on which node this nginx pod is running and go to /test-html directory
#you will see nothing. 
#there you create some sample html file "vi intdex.html", save it and refresh the tab on browser at "https://nodeIP:NodePort"
#there will see the result
